test/scc/decl/semantic-errors/082.t
_Dllimport int a = 0;